--- a/MyBlog/common/templates/base.html
+++ b/MyBlog/common/templates/base.html
@@ -16,7 +16,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500&family=Poppins:wght@100;200;300;400;500;600;700&family=Protest+Revolution&display=swap"
         rel="stylesheet">
-
+    {% block csslink %}
+    {% endblock %}
 
 </head>
 
