--- a/MyBlog/blog/templates/createBlog.html
+++ b/MyBlog/blog/templates/createBlog.html
@@ -1,14 +1,34 @@
 {% extends 'base.html' %}
+{% load static %}
 
 
+{% block csslink %}
+<link rel="stylesheet" href="{% static 'blog/css/createblog.css' %}">
+{% endblock %}
 
 {% block body %}
 
 <div class="blogEditorContainer">
-    <div class="blog_editor_form">
-        <form action="">
+    <div class="blog_editor_form mt-5">
+ 
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
             {{form.media}}
-            {{form.as_p}}
+            <div class="mb-4">
+                <label for="title" class="form-label fs-5 fw-bold" style="color: grey;">Blog Title:</label>
+                <input type="text" name="title" class="form-control" id="title" aria-describedby="emailHelp">
+                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+            </div>
+            <div class="input-group mb-4 d-flex flex-column ">
+                <label for="title" class="form-label fs-5 fw-bold" style="color: grey;">Blog image:</label>
+                <input type="file" name="blog_image" class="form-control w-100" id="inputGroupFile01">
+            </div>
+
+            <div class="blogeditor mb-4">
+                {{form.as_p}}
+            </div>
+            
+            <button type="submit" class="btn btn-dark fw-bold">Create Blog</button>
         </form>
     </div>
 </div>
