create blog front end intgration

--- a/MyBlog/home/templates/home.html
+++ b/MyBlog/home/templates/home.html
@@ -30,7 +30,7 @@
 <section class="recent_blog py-5">
     <h2 class="mb-5 fw-bold text-center">Trending Blogs on Blogosphare</h2>
     <div class="recent_blog_wrapper cards gap-2">
-
+ 
         <div class="card">
             <h3 class="fw-bold">title</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero esse totam
@@ -76,58 +76,22 @@
 <section class="all_blog_container my-5">
     <div class="blog-cat-wrapper">
         <div class="all_blog_wrapper">
-            <div class="blog_card px-5 my-5">
+            {% for blog in object_list %}
+            <div class="blog_card px-5 mt-5">
                 <div class="blog_content">
-                    <h3 class="fw-bold">title</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero
+                    <h3 class="fw-bold">{{blog.title}}</h3>
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero
                         esse totam
                         nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex!
                         Eius,
-                        obcaecati rerum.</p>
+                        obcaecati rerum.</p> -->
+                    <p>{{blog.content|truncatewords:40|safe}}</p>
                 </div>
                 <div class="blog_img">
-                    <img src="{% static 'blog_background.jpg' %}" alt="">
+                    <img src="media/{{blog.blog_image}}" alt="">
                 </div>
             </div>
-            <div class="blog_card px-5 my-5">
-                <div class="blog_content">
-                    <h3 class="fw-bold">title</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero
-                        esse totam
-                        nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex!
-                        Eius,
-                        obcaecati rerum.</p>
-                </div>
-                <div class="blog_img">
-                    <img src="{% static 'blog_background.jpg' %}" alt="">
-                </div>
-            </div>
-            <div class="blog_card px-5 my-5">
-                <div class="blog_content">
-                    <h3 class="fw-bold">title</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero
-                        esse totam
-                        nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex!
-                        Eius,
-                        obcaecati rerum.</p>
-                </div>
-                <div class="blog_img">
-                    <img src="{% static 'blog_background.jpg' %}" alt="">
-                </div>
-            </div>
-            <div class="blog_card px-5 my-5">
-                <div class="blog_content">
-                    <h3 class="fw-bold">title</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero
-                        esse totam
-                        nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex!
-                        Eius,
-                        obcaecati rerum.</p>
-                </div>
-                <div class="blog_img">
-                    <img src="{% static 'blog_background.jpg' %}" alt="">
-                </div>
-            </div>
+            {% endfor %}
         </div>
         <div class="cat_card">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error inventore voluptates nam! Ipsa nulla
