--- a/MyBlog/blog/templates/createBlog.html
+++ b/MyBlog/blog/templates/createBlog.html
@@ -8,9 +8,21 @@
 
 {% block body %}
 
+
+{% if messages %}
+{% for msg in messages %}
+<div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+    {{msg}}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endfor %}
+{% endif %}
+
+
 <div class="blogEditorContainer">
-    <div class="blog_editor_form mt-5">
- 
+
+
+    <div class="blog_editor_form my-5">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.media}}
@@ -27,7 +39,7 @@
             <div class="blogeditor mb-4">
                 {{form.as_p}}
             </div>
-            
+
             <button type="submit" class="btn btn-dark fw-bold">Create Blog</button>
         </form>
     </div>
