--- a/MyBlog/common/templates/base.html
+++ b/MyBlog/common/templates/base.html
@@ -33,8 +33,8 @@
                 </div>
                 <div class="nav-items-wrapper">
                     <ul class="nav-items">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="/">HOME</a></li>
+                        <li><a href="/">ABOUT</a></li>
                         <li class="dropdown">
                             <button id="category-btn">
                                 CATEGORIES
