--- a/MyBlog/static/common/css/navbar.css
+++ b/MyBlog/static/common/css/navbar.css
@@ -221,24 +221,32 @@ body{
     height: 100%;
     object-fit: fit;
 }
+
+.blog_card{
+    display: flex;
+
+}
+
 .all_blog_container .blog_img{
 
-    border: 1px solid rgb(255, 0, 0);
+    /* border: 1px solid rgb(255, 0, 0); */
     width: 30rem;
     height: 10rem;
     flex-basis: 30%;
+    margin-left: 1rem;
 }
 
 .blog_content{
     flex-basis: 70%;
 }
-.blog_card{
-    display: flex;
-    flex: 1;
-}
 
+.all_blog_wrapper{
+    /* border: 1px solid green; */
+    flex-basis: 70%;
+}
 .cat_card{
-    flex: 50rem;
+    flex: 30%;
+    /* border: 1px solid red; */
 }
 
 
