--- a/MyBlog/static/common/css/navbar.css
+++ b/MyBlog/static/common/css/navbar.css
@@ -2,6 +2,12 @@ body{
     /* background-color: rgb(252, 252, 252); */
 }
 
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 .main-nav-bar {
     /* border: 1px solid red; */
     position: relative;
