--- a/MyBlog/common/templates/base.html
+++ b/MyBlog/common/templates/base.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="nav-bar-search">
-                
+
                 <form action="#" class="search">
                     <input type="search" placeholder="search blog" class="search-bar bg-dark">
                     <button style="margin-left: 5px;" class="btn btn-dark"><i class="fa fa-search"
@@ -65,15 +65,29 @@
 
                 <button type="button" class="btn btn-danger" data-bs-toggle="modal"
                     data-bs-target="#exampleModalRegister" onclick="clearSignupFormData()">Sign Up</button>
-                
+
                 {% endif %}
-                
+
                 {% if request.user.is_authenticated %}
-                <form method="POST" action="auth/logout/">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger">Log out</button>
-                </form>
+
+                <div class="btn-group">
+                    <button type="button" class="btn p-0 rounded-circle" data-bs-toggle="dropdown" data-bs-display="static"
+                        aria-expanded="false" style="width: 3rem;height: 3rem;">
+                        <img src=""  alt="profile_image" id="profile_image" class="rounded-circle" style="width: 100%; height: 100%; object-fit: cover;">
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-lg-end mt-3">
+                        <li><button class="dropdown-item" type="button">Action</button></li>
+                        <li><button class="dropdown-item" type="button">Another action</button></li>
+                        <li>
+                            <form method="POST" action="auth/logout/">
+                                {% csrf_token %}
+                                <button type="submit" class="dropdown-item">Log out</button>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
                 {% endif %}
+
             </div>
         </div>
 
@@ -96,7 +110,7 @@
                                 <input type="email" name="email" class="form-control border-secondary-subtle"
                                     id="exampleInputEmail1" aria-describedby="emailHelp">
                                 <div id="loginEmailError" class="form-text" style="color: red;padding-left: 5px;"></div>
-                              
+
                             </div>
                             <div class="mb-5">
                                 <label for="exampleInputPassword1" class="form-label">Password</label>
@@ -104,7 +118,8 @@
                                     id="exampleInputPassword1">
                                 <div id="passwordError" class="form-text" style="color: red;padding-left: 5px;"></div>
                             </div>
-                            <button type="button" class="btn btn-primary w-100 fw-bold" onclick="login()" id="login-btn">Login</button>
+                            <button type="button" class="btn btn-primary w-100 fw-bold" onclick="login()"
+                                id="login-btn">Login</button>
                         </form>
                     </div>
                     <div class="modal-footer">
@@ -164,6 +179,7 @@
 
 </body>
 <script src="{% static '/common/js/navbar.js' %}">
+
 
 </script>
 
