--- a/MyBlog/common/templates/base.html
+++ b/MyBlog/common/templates/base.html
@@ -72,11 +72,17 @@
 
                 <div class="btn-group">
                     <button type="button" class="btn p-0 rounded-circle" data-bs-toggle="dropdown" data-bs-display="static"
-                        aria-expanded="false" style="width: 3rem;height: 3rem;">
-                        <img src=""  alt="profile_image" id="profile_image" class="rounded-circle" style="width: 100%; height: 100%; object-fit: cover;">
+                        aria-expanded="false" ">
+                        <img src=""  alt="profile_image" id="profile_image" class="rounded-circle" style="width: 3rem;height: 3rem; object-fit: cover;">
+                        
+                        <!-- <p style="color: white;" id='user_name' class="my-auto ms-2 fs-5"></p> -->
                     </button>
                     <ul class="dropdown-menu dropdown-menu-lg-end mt-3">
-                        <li><button class="dropdown-item" type="button">Action</button></li>
+                        <li>
+                            <form action="http://127.0.0.1:8000/user/profile/">
+                                <button class="dropdown-item" type="submit">Profile</button>
+                            </form>
+                        </li>
                         <li><button class="dropdown-item" type="button">Another action</button></li>
                         <li>
                             <form method="POST" action="auth/logout/">
