--- a/MyBlog/blog/templates/createBlog.html
+++ b/MyBlog/blog/templates/createBlog.html
@@ -4,6 +4,36 @@
 
 {% block csslink %}
 <link rel="stylesheet" href="{% static 'blog/css/createblog.css' %}">
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+{% endblock %}
+
+{% block css %}
+<style>
+    .select2-selection{
+        padding: 8px;
+        display: flex !important;
+        align-item: center;
+
+    }
+
+    .select2-search__field{
+        height: 2rem !important;
+        margin-bottom: 0.5rem !important;
+        padding: 5px  !important;
+        border: 1px solid red !important;
+    }
+
+    .select2-selection__choice{
+        margin : 0 5px -15px 0 !important;
+        background-color : #f2f2f2 !important;
+        font-size:1.2rem !important;
+        
+    }
+
+</style>
 {% endblock %}
 
 {% block body %}
@@ -40,9 +70,27 @@
                 {{form.as_p}}
             </div>
 
-            <button type="submit" class="btn btn-dark fw-bold">Create Blog</button>
+            <select class="js-example-basic-multiple form-control" name="states[]" multiple='multiple'>
+
+            </select>
+
+            <button type="submit" class="btn btn-dark fw-bold mt-5">Create Blog</button>
         </form>
     </div>
 </div>
 
+{% endblock %}
+
+{%  block js %}
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('.js-example-basic-multiple').select2({
+            placeholder: "Add categories",
+            tags: true,
+           
+            
+        });
+    });
+</script>
 {% endblock %}
