--- a/MyBlog/blog/templates/createBlog.html
+++ b/MyBlog/blog/templates/createBlog.html
@@ -23,7 +23,7 @@
         height: 2rem !important;
         margin-bottom: 0.5rem !important;
         padding: 5px  !important;
-        border: 1px solid red !important;
+        /* border: 1px solid red !important; */
     }
 
     .select2-selection__choice{
@@ -70,7 +70,7 @@
                 {{form.as_p}}
             </div>
 
-            <select class="js-example-basic-multiple form-control" name="states[]" multiple='multiple'>
+            <select class="js-example-basic-multiple form-control" name="categories[]" multiple='multiple'>
 
             </select>
 
@@ -88,8 +88,7 @@
         $('.js-example-basic-multiple').select2({
             placeholder: "Add categories",
             tags: true,
-           
-            
+            tokenSeparators: [',', ' ']
         });
     });
 </script>
