--- a/MyBlog/home/templates/home.html
+++ b/MyBlog/home/templates/home.html
@@ -102,7 +102,7 @@
         <div class="blog_card px-5 mb-5">
             <div class="blog_content">
                 <h3 class="fw-bold">${value.title}</h3>
-                <p>${value.content}</p>
+                <div class="overflow-hidden" style="height: 70%">${value.content}</div>
             </div>
             <div class="blog_img">
                 <img src="${value.blog_image}" alt="">
