--- a/MyBlog/home/templates/home.html
+++ b/MyBlog/home/templates/home.html
@@ -27,7 +27,7 @@
     </div>
 </section>
 
-<section class="recent_blog py-5">
+<!-- <section class="recent_blog py-5">
     <h2 class="mb-5 fw-bold text-center">Trending Blogs on Blogosphare</h2>
     <div class="recent_blog_wrapper cards gap-2">
  
@@ -71,17 +71,25 @@
                 obcaecati rerum.</p>
         </div>
     </div>
-</section>
+</section> -->
 
 <section class="all_blog_container my-5">
+    
     <div class="blog-cat-wrapper">
-        <div class="all_blog_wrapper">
-            
+        <div class="all_blog_wrapper mt-3">
+            <h2 class="mb-5 fw-bold mx-4 pb-1 ps-4" style="border-bottom: 1px solid #cccccc; color:dark">All Blogs:</h2>
+            <div class="all_blogs w-100">
+
+            </div>
         </div>
-        <div class="cat_card">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error inventore voluptates nam! Ipsa nulla
-            aut, natus quaerat, eum delectus dolor ipsam quae dicta aspernatur illum eaque omnis laborum quam
-            molestiae.
+        <div class="cat_card  mt-3">
+            <h2 class="mb-5 fw-bold mx-2 pb-1 " style="border-bottom: 1px solid #cccccc; color:dark">Topics:</h2>
+            <div class="mx-2 d-flex gap-3 flex-wrap" >
+                {% for category in object_list %}
+                <button style="background-color: #e6e6e6" class="btn py-2 px-3 rounded-pill" onclick="getBlogs({{category.id}})">{{category|capfirst }}</button>
+                {% endfor %}
+                <button style="background-color: #e6e6e6" class="btn py-2 px-3 rounded-pill" onclick="get_all_blogs()">Show all</button>
+            </div>
         </div>
     </div>
 </section>
@@ -91,7 +99,7 @@
 {% block js %}
 <script>
     function appendBlogs(value, idx, arr) {
-        block = document.querySelector('.all_blog_wrapper')
+        block = document.querySelector('.all_blogs')
         // console.log(value)
         block.innerHTML += ` 
         <div class='px-5 d-flex gap-2 text-align-vertical'>
@@ -101,7 +109,7 @@
         </div>                   
         <div class="blog_card px-5 mb-5">
             <div class="blog_content">
-                <h3 class="fw-bold">${value.title}</h3>
+                <h4 class="fw-bold">${value.title}</h4>
                 <div class="overflow-hidden" style="height: 70%">${value.content}</div>
             </div>
             <div class="blog_img">
@@ -121,5 +129,17 @@
     }
 
     get_all_blogs()
+
+    function getBlogs(id) {
+        fetch('http://127.0.0.1:8000/blog/api/filterBlogs/'+id+"/")
+            .then((response) => {
+                return response.json();
+            })
+            .then((data) => {
+                // document.querySelector('.all_blogs').innerHTML = ""
+                // data.forEach(appendBlogs);;
+            })
+    }
+
 </script>
 {% endblock %}
