--- a/MyBlog/blog/templates/createBlog.html
+++ b/MyBlog/blog/templates/createBlog.html
@@ -17,6 +17,7 @@
         display: flex !important;
         align-item: center;
         border: 1px solid #e6e6e6!important;
+        width: 100%;
 
     }
 
