--- a/MyBlog/user/templates/userprofile.html
+++ b/MyBlog/user/templates/userprofile.html
@@ -34,12 +34,16 @@
                     {% for blog in object_list %}
                     <div class="blog_card my-5">
                         <div class="blog_content">
-                            
+                            <div class='d-flex gap-2 text-align-vertical'>
+                                <img src="http://127.0.0.1:8000/media/{{profile_data.profile_img}}" style="width:1.7rem;height:1.7rem;" class="rounded-circle" alt="">
+                                <p>{{profile_data.name}}</p>
+                                <p style="color:#7f7f7f"></p>
+                            </div> 
                             <h3 class="fw-bold">{{blog.title}}</h3>
-                            <p>{{blog.content|truncatewords:30|safe}}</p>
+                            <p>{{blog.content|truncatewords:50|safe}}</p>
                         </div>
                         <div class="blog_img ms-3" style="width: 16rem;height: 10rem;">
-                            <img src="http://127.0.0.1:8000/media/{{blog.blog_image}}" class="w-100 h-100" alt="">
+                            <img src="http://127.0.0.1:8000/{{blog.blog_image}}" class="w-100 h-100" alt="">
                         </div>
                     </div>
                     {% endfor %}
